# petting-zootopia

./: .env.example  .gitignore  ADDING_BACKENDS.md  CLIENT_CONFIG.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  error_handling.py  health_check.py  pyproject.toml  rate_limiter.py  rate_limiting.py  requirements.txt  run_tests.sh  setup.sh  stop.sh  test_mcp.sh  test_mcp_tools.py  test_runner.py
client/: ai_mcp_client.py  ai_petting_zootopia_client.py  petting_zootopia_client.py
mcp_client/: ai_mcp_client.py
server/: observability.py  petting_zootopia.py
src/petting_zootopia/: __init__.py  client.py  config.py  http.py  server.py  types.py  web.py
tests/: README.md  __init__.py  conftest.py  test_ai_backends.py  test_e2e.py  test_http.py  test_mcp_client_llm.py  test_mcp_tools.py  test_types.py  test_web_app.py
tests/unit/: test_mcp_tools.py
web/: about.html  app.py  index.html  start.sh
web/assets/: README.md
web_client/: about.html  app.py  index.html  start.sh
