[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petting-zootopia"
version = "1.0.0"
description = "A functional MCP server for fetching random animal images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Petting Zootopia Contributors" }
]
keywords = ["mcp", "animals", "api", "functional-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-fastapi",
]

[project.scripts]
petting-zootopia = "petting_zootopia.server:main"
petting-zootopia-web = "petting_zootopia.web:main"
petting-zootopia-client = "petting_zootopia.client:main"

[project.urls]
Homepage = "https://github.com/yourusername/petting-zootopia"
Repository = "https://github.com/yourusername/petting-zootopia"

[tool.hatch.build.targets.wheel]
packages = ["src/petting_zootopia"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
